compiler/tests/sct-checker/success/bug_852.jazz
inline
fn reset(stack u64 t) {
  [t] = 0;
}

export
fn main(reg u64 x) {
  _ = #init_msf();
  stack u64 s;
  s = x;
  reset(s);
}
